[package]
name = "pixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy_embedded_assets = "0.9.1"
bevy_framepace = "0.14.1"
bevy-inspector-egui = "0.21.0"
big-brain = "0.18.0"
serde = "1.0.192"
rand = "0.8.5"
leafwing-input-manager = "0.11.1"

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
  "animation",
  "bevy_asset",
  # "bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  # "vorbis",
  "x11",
  "bevy_gizmos",
  # "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
  "file_watcher",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
